# auth-service

./: .env.local  Dockerfile  Makefile  create_yoyo_ini.sh  docker-compose.local.yaml  pyproject.toml
app/: __main__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  profile.py
app/auth/: auth_pb2_grpc.py  auth_server.py
app/core/: prometheus_aio_server_interceptor.py
app/core/mail_sender/: __init__.py  config.py
app/core/rabbit/: queues.py  rabbit_connection.py
app/core/security/: oauth2.py  security.py
app/core/settings/: app.py  base.py  development.py  production.py
app/crud/: refresh_token.py  user.py
app/dto/models/: boxer.py  token.py  user.py  user_dto.py
app/dto/request/: auth.py  change_password_dto.py  profile.py  signin_dto.py  signup_dto.py  update_user_dto.py
app/dto/response/: signin_dto.py
app/exceptions/: token_exceptions.py  user_exceptions.py
app/models/: token.py
app/protos/: auth.proto
app/utlis/: authenticate.py  generate_verify_token.py  password_validation.py  phone_number_validation.py  send_verification_mail.py
app_old/api/v1/endpoints/: auth.py
migrations/: 20240104_01_cuerY.sql
